# Touchless

./: README.md  package-lock.json  package.json
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: Board.svelte  HandStatistic.svelte  NavBar.svelte
src/routes/: +layout.svelte  +page.svelte
src/scripts/: engine.ts  executor.ts  gesture_parser.ts
src/stores/: board_state.ts  engine_state.ts  hand_result.ts
src/utils/: algo.ts  labels.ts  node.ts
static/: nodes.json
static/css/: main.css
