[package]
name = "touchless"
version = "0.0.1"
description = "An app made by Team 3 - JS Club"
authors = ["Team 3 - JS Club"]
edition = "2021"

[lib]
name = "touchless_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mouce = "0.2.50"
enigo = "0.3.0"

[profile.dev]
opt-level = 0
overflow-checks = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package.wry]
debug = true
debug-assertions = true
